add sorting to /queries
